# stellar-trust-escrow

./: eslint.config.js  package-lock.json
backend/: openapi.yaml  package.json  server.js
backend/api/controllers/: adminController.js  authController.js  escrowController.js
backend/api/middleware/: mfaAuth.js
backend/api/routes/: adminRoutes.js  escrowRoutes.js
backend/database/: schema.prisma
backend/monitoring/: rpcMonitor.js
backend/services/: cacheService.js  ipfsService.js  mfaService.js  stellarClient.js
backend/tests/: escrowArchiveService.test.js  stellarClient.test.js  webhook.test.js
backend/tests/middleware/: mfaAuth.test.js
backend/tests/services/: mfaService.test.js
contracts/escrow_contract/src/: arbiter_validation_tests.rs  errors.rs  event_names.rs  events.rs  fees.rs  fuzz_tests.rs  lib.rs  self_escrow_tests.rs  subscription.rs  types.rs
contracts/escrow_extensions/src/: crosschain.rs  lib.rs  types.rs
contracts/governance/src/: lib.rs  penalties.rs  staking.rs  types.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: vault.rs
frontend/app/escrow/[id]/: page.jsx
frontend/components/escrow/: EscrowCard.jsx
frontend/components/ui/: WalletStatus.jsx
